--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -10,6 +10,13 @@
             <version>0.1.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-agroal</artifactId>
+            <version>5.3.19.Final</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
     <parent>
