--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -12,10 +12,15 @@
         </dependency>
 
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.36</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-agroal</artifactId>
-            <version>5.3.19.Final</version>
-            <type>pom</type>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.2.Final</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
