--- a/factory/pom.xml
+++ b/factory/pom.xml
@@ -17,6 +17,42 @@
             <version>5.2.5.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jasperstrijp.wolftracker.api</groupId>
+            <artifactId>logic-abstraction</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jasperstrijp.wolftracker.api</groupId>
+            <artifactId>repository-abstraction</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jasperstrijp.wolftracker.api</groupId>
+            <artifactId>data-access-abstraction</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>data-access</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jasperstrijp.wolftracker.api</groupId>
+            <artifactId>repository</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jasperstrijp.wolftracker.api</groupId>
+            <artifactId>logic</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
