--- a/presentation/pom.xml
+++ b/presentation/pom.xml
@@ -44,13 +44,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-			<optional>true</optional>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -89,6 +82,24 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>com.jasperstrijp.wolftracker.api</groupId>
+            <artifactId>models</artifactId>
+            <version>0.1.0</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>com.jasperstrijp.wolftracker.api</groupId>
+			<artifactId>logic-abstraction</artifactId>
+			<version>0.1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.jasperstrijp.wolftracker.api</groupId>
+			<artifactId>factory</artifactId>
+			<version>0.1.0</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
